--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,13 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Thawani Payment Gateway
+THAWANI_URL=https://uatcheckout.thawani.om
+THAWANI_SECRET_KEY=your_secret_key_here
+THAWANI_PUBLISHABLE_KEY=your_publishable_key_here
+
+# SMS Gateway (for OTP)
+SMS_GATEWAY_URL=https://sms-provider.com/api
+SMS_GATEWAY_KEY=your_sms_api_key
+SMS_GATEWAY_SENDER=SOHAR_FEST
